--- a/briar-android/src/main/res/values/strings.xml
+++ b/briar-android/src/main/res/values/strings.xml
@@ -21,6 +21,11 @@
 	<string name="more_info">More Information</string>
 	<string name="don_t_ask_again">Don\'t ask again</string>
 
+	<string name="setup_huawei_text">Please tap the button below and make sure Briar is protected in the \"Protected Apps\" screen.</string>
+	<string name="setup_huawei_button">Protect Briar</string>
+	<string name="setup_huawei_help">If Briar is not added to the protected apps list, it will be unable to run in the background.</string>
+	<string name="warning_dozed">%s was unable to run in the background</string>
+
 	<!-- Login -->
 	<string name="enter_password">Enter your password:</string>
 	<string name="try_again">Wrong password, try again</string>
@@ -95,8 +100,8 @@
 	<string name="ellipsis">…</string>
 	<string name="text_too_long">The entered text is too long</string>
 	<string name="show_onboarding">Show Help Dialog</string>
-	<string name="warning_dozed">%s was unable to run in the background</string>
 	<string name="fix">Fix</string>
+	<string name="help">Help</string>
 
 	<!-- Contacts and Private Conversations-->
 	<string name="no_contacts">It seems that you are new here and have no contacts yet.\n\nTap the + icon at the top and follow the instructions to add some friends to your list.\n\nPlease remember: You can only add new contacts face-to-face to prevent anyone from impersonating you or reading your messages in the future.</string>
